--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="name">
-        <h1>Djjjshdhd djdjf</h1>
+        <h1>Djjjsh</h1>
         <h2>dkjdkdsfk adoo</h2>
     </div>
 </body>
