--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="name">
         <h1>Djjjsh</h1>
         <h2>dkjdkdsfk adoo</h2>
+        <p>sj ddkd<strong>kdkdjjdjd<i>kdkdjdkd</i></strong></p>
     </div>
 </body>
 </html>
