--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="name">
         <h1>Djjjsfkfkdh</h1>
         <h2>dkjdkdsfk adoo</h2>
-        <p>sj ddkdhdhd hdhkdkdkd sksdj sjskjd sjsjs d<strong>kdkdjjdjd<i>kdkdjdkd</i></strong></p>
+        <p>sj ddkdhdhdjdkd d hdhkdkdkd sksdj sjskjd sjsjs d<strong>kdkdjjdjd<i>kdkdjdkd</i></strong></p>
     </div>
 </body>
 </html>
